--- a/deploy/horizontalautoscaler.yaml
+++ b/deploy/horizontalautoscaler.yaml
@@ -3,15 +3,15 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: alitaa-cpu-autoscaling
-  namespace: alitaa-aks-ns
+  name: #{Build.BuildBranch}#-cpu-autoscaling
+  namespace: #{Build.NameSpace}#
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: alitaa-aks-ns
+    name: #{Build.BuildBranch}#-deployment
   minReplicas: 1
-  maxReplicas: 2
+  maxReplicas: 3
   metrics:
     - type: Resource
       resource:
