--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -3,14 +3,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: alitaa-be-gpt-svc
-  namespace: alitaa-aks-ns
+  name: #{Build.BuildBranch}#-svc
+  namespace: #{Build.NameSpace}#
 spec:
   selector:
-    app: alitaa-be-gpt-app
+    app: #{Build.BuildBranch}#
   ports:
     - protocol: TCP
-      name: alitaa-be-gpt-app
       port: 80
       targetPort: 8000
   type: LoadBalancer
